--- a/src/pages/Main/components/Input/styles.module.scss
+++ b/src/pages/Main/components/Input/styles.module.scss
@@ -20,6 +20,11 @@
   outline: none;
 }
 
+.tip {
+  font-size: 12px;
+  color: #00000050;
+}
+
 @media (max-width: 900px) {
   .container {
     gap: 6px;
