--- a/src/pages/SecondStep/components/Input/styles.module.scss
+++ b/src/pages/SecondStep/components/Input/styles.module.scss
@@ -14,4 +14,19 @@
 .img {
   width: 24px;
   height: 24px;
+  cursor: pointer;
+}
+
+@media (max-width: 900px) {
+  .container {
+    gap: 15px;
+  }
+  .input {
+    width: 100%;
+  }
+
+  .img {
+    width: 18px;
+    height: 18px;
+  }
 }
