--- a/src/pages/ThirdStep/styles.module.scss
+++ b/src/pages/ThirdStep/styles.module.scss
@@ -18,9 +18,19 @@
   margin-bottom: 8px;
 }
 
+.textarea_container {
+  position: relative;
+  p {
+    position: absolute;
+    bottom: 20px;
+    right: 10px;
+  }
+}
+
 .textarea {
+  outline: none;
   margin-bottom: 8px;
-  width: 680px;
+  width: 100%;
   padding: 12px;
   border-radius: 4px;
   border: 1px solid #e5e5e5;
@@ -36,4 +46,19 @@
   margin-top: 64px;
   display: flex;
   justify-content: space-between;
+}
+
+@media (max-width: 900px) {
+  .container {
+    width: 100%;
+    padding: 30px;
+  }
+
+  .progress_line {
+    margin-bottom: 20px;
+  }
+
+  .buttons {
+    margin-top: 32px;
+  }
 }
